<resources>
    <string name="app_name">Simple Canculator</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="fore">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="night">9</string>
    <string name="clear">C</string>
    <string name="pare">()</string>
    <string name="plus">+</string>
    <string name="sub">-</string>
    <string name="mul">x</string>
    <string name="dev">÷</string>
    <string name="head">^</string>
    <string name="equal">=</string>
    <string name="dot">.</string>

</resources>