<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtResult"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Nhập phép tính"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="40dp" />

    <TableLayout
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <androidx.appcompat.widget.AppCompatButton
                android:backgroundTint="#BD3131"
                android:layout_margin="5dp"
                android:background="@drawable/circle"
                android:textColor="@color/white"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/clear"
                android:id="@+id/btnClear"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="5dp"
                android:background="@drawable/circle"
                android:textColor="@color/white"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/pare"
                android:id="@+id/btnPare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="5dp"
                android:background="@drawable/circle"
                android:textColor="@color/white"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/head"
                android:id="@+id/btnHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="5dp"
                android:background="@drawable/circle"
                android:textColor="@color/white"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/dev"
                android:id="@+id/btnDev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="5dp"
                android:background="@drawable/circle"
                android:textColor="@color/white"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/seven"
                android:id="@+id/btnSeven"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="5dp"
                android:background="@drawable/circle"
                android:textColor="@color/white"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/eight"
                android:id="@+id/btnEight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="5dp"
                android:background="@drawable/circle"
                android:textColor="@color/white"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/night"
                android:id="@+id/btnNight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="5dp"
                android:background="@drawable/circle"
                android:textColor="@color/white"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/mul"
                android:id="@+id/btnMul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="5dp"
                android:background="@drawable/circle"
                android:textColor="@color/white"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/fore"
                android:id="@+id/btnFore"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="5dp"
                android:background="@drawable/circle"
                android:textColor="@color/white"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/five"
                android:id="@+id/btnFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="5dp"
                android:background="@drawable/circle"
                android:textColor="@color/white"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/six"
                android:id="@+id/btnSix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="5dp"
                android:background="@drawable/circle"
                android:textColor="@color/white"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/sub"
                android:id="@+id/btnSub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="5dp"
                android:background="@drawable/circle"
                android:textColor="@color/white"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/one"
                android:id="@+id/btnOne"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="5dp"
                android:background="@drawable/circle"
                android:textColor="@color/white"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/two"
                android:id="@+id/btnTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="5dp"
                android:background="@drawable/circle"
                android:textColor="@color/white"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/three"
                android:id="@+id/btnThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="5dp"
                android:background="@drawable/circle"
                android:textColor="@color/white"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/plus"
                android:id="@+id/btnPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="5dp"
                android:background="@drawable/circle"
                android:textColor="@color/white"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="Delete"
                android:id="@+id/btnDelete"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="5dp"
                android:background="@drawable/circle"
                android:textColor="@color/white"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/zero"
                android:id="@+id/btnZero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="5dp"
                android:background="@drawable/circle"
                android:textColor="@color/white"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/dot"
                android:id="@+id/btnDot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatButton
                android:backgroundTint="#305C32"
                android:layout_margin="5dp"
                android:background="@drawable/circle"
                android:textColor="@color/white"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/equal"
                android:id="@+id/btnEqual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>